@@ -6,7 +6,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - name: checkout the repo
+      uses: actions/checkout@v3
+      with:
+        path: main
     - name: Generate static VuePress files
       run: |
         pip install -r requirements.txt
