@@ -1,4 +1,14 @@
-### Update workflow definition (HEAD -> main)
+### Update github workflow (HEAD -> main)
+>Fri, 13 Jan 2023 05:13:16 +0100
+
+>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
+
+>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
+
+
+
+
+### Update workflow definition (origin/main, origin/HEAD)
 >Fri, 13 Jan 2023 05:01:53 +0100
 
 >Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
@@ -8,7 +18,7 @@
 
 
 
-### Build and deploy the doc (origin/main, origin/HEAD)
+### Build and deploy the doc
 >Fri, 13 Jan 2023 04:46:39 +0100
 
 >Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
